--- a/app/views/books/newa.html.erb
+++ b/app/views/books/newa.html.erb
@@ -4,11 +4,11 @@
 <br>
 <p1>
   <ul>
-  <li><%= link_to '駐車場１', books_new1_path %></li>24時間500円 大宰府まで約5分<br>
+  <li><%= link_to '駐車場１', reservationcs_path %></li>24時間500円 大宰府まで約5分<br>
   
   <br>
-  <li><%= link_to '駐車場２', books_new1_path %>   </li>24時間400円 大宰府まで約10分<br>
+  <li><%= link_to '駐車場２', reservationcs_path %>   </li>24時間400円 大宰府まで約10分<br>
 <br>  
-<li><%= link_to '駐車場３', books_new1_path %>   </li>24時間300円 大宰府まで約15分
+<li><%= link_to '駐車場３', reservationcs_path %>   </li>24時間300円 大宰府まで約15分
 </ul>
 </p1>
