--- a/app/views/books/new1.html.erb
+++ b/app/views/books/new1.html.erb
@@ -1,8 +1,10 @@
-<p3>
+<div class="sentaku"> 
+<h1>
     観光地を選択してください
-</p3>
+</h1>
+</div>
 <br>
-<p1>
+<div class="contents">
   <ul>
   <li><%= link_to '大宰府', books_newa_path %></li>
   
@@ -11,4 +13,4 @@
 <br>  
 <li><%= link_to '門司港', books_newc_path %></li>
 </ul>
-</p1>
+</div>
