--- a/app/views/books/newa.html.erb
+++ b/app/views/books/newa.html.erb
@@ -1,14 +1,16 @@
-<p3>
+<div class="sentaku"> 
+<h1>
    駐車場を選んでください
-</p3>
+</h1>
+</div>
 <br>
 <p1>
   <ul>
-  <li><%= link_to '駐車場１', reservationcs_path %></li>24時間500円 大宰府まで約5分<br>
+  <li><%= link_to 'タイムズ大宰府前', reservationcs_path %></li>24時間500円 大宰府まで約5分<br>
   
   <br>
-  <li><%= link_to '駐車場２', reservationcs_path %>   </li>24時間400円 大宰府まで約10分<br>
+  <li><%= link_to '大宰府パーキング', reservationcs_path %>   </li>24時間400円 大宰府まで約10分<br>
 <br>  
-<li><%= link_to '駐車場３', reservationcs_path %>   </li>24時間300円 大宰府まで約15分
+<li><%= link_to 'セイワパーク大宰府', reservationcs_path %>   </li>24時間300円 大宰府まで約15分
 </ul>
 </p1>
