--- a/app/views/books/newc.html.erb
+++ b/app/views/books/newc.html.erb
@@ -1,1 +1,16 @@
-c
+<div class="sentaku"> 
+<h1>
+   駐車場を選んでください
+</h1>
+</div>
+<br>
+<p1>
+  <ul>
+  <li><%= link_to 'レトロ駐車場', reservationcs_path %></li>24時間500円 門司港まで約5分<br>
+  
+  <br>
+  <li><%= link_to 'タイムズ門司港町', reservationcs_path %>   </li>24時間400円 門司港まで約10分<br>
+<br>  
+<li><%= link_to 'NPC24H門司港町パーキング', reservationcs_path %>   </li>24時間300円 門司港まで約15分
+</ul>
+</p1>
