--- a/app/views/books/newb.html.erb
+++ b/app/views/books/newb.html.erb
@@ -1,1 +1,16 @@
-b
+<div class="sentaku"> 
+<h1>
+   駐車場を選んでください
+</h1>
+</div>
+<br>
+<p1>
+  <ul>
+  <li><%= link_to 'ヤフオクドーム駐車場', reservationcs_path %></li>24時間500円 PayPayドームまで約5分<br>
+  
+  <br>
+  <li><%= link_to 'アルゴパーク地行', reservationcs_path %>   </li>24時間400円 PayPayドームまで約10分<br>
+<br>  
+<li><%= link_to 'タイムズ福浜2丁目', reservationcs_path %>   </li>24時間300円 PayPayドームまで約15分
+</ul>
+</p1>
