--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>予約</title>
-    <title>CalendarApp</title>
+    <meta charset="UTF-8">
+    <title>parkreservation</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   </head>
 
   <body>
+    
+    
+    <div class="header">
+    <h1>
+      parkreservation
+    </h1>
+    
+    <p>
+      
+    </p>
+</div>
+    
     <%= yield %>
 
-
-  </body>
-</html>
   </body>
 </html>
